--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
+      <nav class="flex header">
+        <ul class="flex stageRight">
           <li><a href="#">hello</a></li>
           <li><a href="#">bonjour</a></li>
           <li><a href="#">marhaba</a></li>
         </ul>
-        <div>
+        <div class="flex stageLeft">
           <form>Drop down menu</form>
           <img src="#" alt="logo">
         </div>
       </nav>
     </header>
     <main>
-      <h1>Shares</h1>
-      <div class="card" id="1">
+      <h1 class="title">Shares</h1>
+      <section class="flex allCards-top">
+      <div class="cards card-row1" id="1">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -30,7 +31,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="2">
+      <div class="cards card-row1" id="2">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -41,7 +42,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="3">
+      <div class="cards card-row1" id="3">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -52,7 +53,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="4">
+      <div class="cards card-row1" id="4">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -63,7 +64,9 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="5">
+      </section>
+      <section class="allCards-bottom"
+      <div class="cards card-row2" id="5">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -74,7 +77,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="6">
+      <div class="cards card-row2" id="6">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -85,7 +88,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="7">
+      <div class="cards card-row2" id="7">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -96,7 +99,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="card" id="8">
+      <div class="cards card-row2" id="8">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -107,6 +110,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
+    </section>
     </main>
   </body>
 </html>
