--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <h1 class="title">Shares</h1>
       <section class="flex allCards-top">
-      <div class="cards card-row1" id="1">
+      <div class="flex cards card-row1" id="1">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -31,7 +31,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="cards card-row1" id="2">
+      <div class="flex cards card-row1" id="2">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -42,7 +42,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="cards card-row1" id="3">
+      <div class="flex cards card-row1" id="3">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -53,7 +53,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="cards card-row1" id="4">
+      <div class="flex cards card-row1" id="4">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -65,8 +65,8 @@
         <span>number</span>
       </div>
       </section>
-      <section class="allCards-bottom"
-      <div class="cards card-row2" id="5">
+      <section class="flex allCards-bottom">
+      <div class="flex cards card-row2" id="5">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -77,7 +77,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="cards card-row2" id="6">
+      <div class="flex cards card-row2" id="6">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -88,7 +88,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="cards card-row2" id="7">
+      <div class="flex cards card-row2" id="7">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -99,7 +99,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="cards card-row2" id="8">
+      <div class="flex cards card-row2" id="8">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
