--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 class="title">Shares</h1>
       <section class="flex allCards-top">
       <div class="flex cards card-row1" id="1">
-        <img src="#" alt="Donor 1">
+        <img src="#" alt="Donor 1" class="image">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
         <p>last viewed</p>
@@ -32,7 +32,7 @@
         <span>number</span>
       </div>
       <div class="flex cards card-row1" id="2">
-        <img src="#" alt="Donor 1">
+        <img src="#" alt="Donor 1" class="image">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
         <p>last viewed</p>
@@ -43,7 +43,7 @@
         <span>number</span>
       </div>
       <div class="flex cards card-row1" id="3">
-        <img src="#" alt="Donor 1">
+        <img src="#" alt="Donor 1" class="image">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
         <p>last viewed</p>
@@ -54,7 +54,7 @@
         <span>number</span>
       </div>
       <div class="flex cards card-row1" id="4">
-        <img src="#" alt="Donor 1">
+        <img src="#" alt="Donor 1" class="image">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
         <p>last viewed</p>
@@ -66,7 +66,7 @@
       </div>
       </section>
       <section class="flex allCards-bottom">
-      <div class="flex cards card-row2" id="5">
+      <div class="flex cards card-row2" id="5" class="image">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -77,7 +77,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="flex cards card-row2" id="6">
+      <div class="flex cards card-row2" id="6" class="image">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -88,7 +88,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="flex cards card-row2" id="7">
+      <div class="flex cards card-row2" id="7" class="image">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
@@ -99,7 +99,7 @@
         <h6>Attachments</h6>
         <span>number</span>
       </div>
-      <div class="flex cards card-row2" id="8">
+      <div class="flex cards card-row2" id="8" class="image">
         <img src="#" alt="Donor 1">
         <h2>views</h2>
         <h3>Recipient's Name</h3>
