Update css and html, add icons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     <header>
       <nav class="flex header">
         <ul class="flex stageRight">
-          <li><a href="#">hello</a></li>
-          <li><a href="#">bonjour</a></li>
-          <li><a href="#">marhaba</a></li>
+          <li>
+            <img src="assets/share.png" class="icons">
+            <a href="#">Near Me</a>
+          </li>
+          <li>
+            <img src="assets/list.png" class="icons">
+            <a href="#">Top Rated</a>
+          </li>
+          <li><a href="#">👤 Reviews</a></li>
         </ul>
         <div class="flex stageLeft">
-          <form>Drop down menu</form>
-          <img src="#" alt="logo">
+          <div class="flex menu">
+            <img src="assets/user.png" class="icons">
+            <label for="Admin">Admin Username</label>
+            <select name="Admin" id="admin"></select>
+          </div>
+          <img src="assets/logo.png" alt="logo" class="logo">
         </div>
       </nav>
     </header>
@@ -21,93 +31,134 @@
       <h1 class="title">Shares</h1>
       <section class="flex allCards-top">
       <div class="flex cards card-row1" id="1">
-        <img src="#" alt="Donor 1" class="image">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
       <div class="flex cards card-row1" id="2">
-        <img src="#" alt="Donor 1" class="image">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
       <div class="flex cards card-row1" id="3">
-        <img src="#" alt="Donor 1" class="image">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
       <div class="flex cards card-row1" id="4">
-        <img src="#" alt="Donor 1" class="image">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
       </section>
       <section class="flex allCards-bottom">
-      <div class="flex cards card-row2" id="5" class="image">
-        <img src="#" alt="Donor 1">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+      <div class="flex cards card-row2" id="5">
+        <!-- <img src="assets/latte.jpg" alt="Donor 1"  class="image"> -->
+        <div class="flex background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
-      <div class="flex cards card-row2" id="6" class="image">
-        <img src="#" alt="Donor 1">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+      <div class="flex cards card-row2" id="6">
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="flex background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <!-- <a href="#">Link</a> -->
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
-      <div class="flex cards card-row2" id="7" class="image">
-        <img src="#" alt="Donor 1">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+      <div class="flex cards card-row2" id="7">
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="flex background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
-      <div class="flex cards card-row2" id="8" class="image">
-        <img src="#" alt="Donor 1">
-        <h2>views</h2>
-        <h3>Recipient's Name</h3>
+      <div class="flex cards card-row2" id="8">
+        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
+        <div class="flex background">
+          <p>Views</p>
+          <p class="number">04</p>
+        </div>
+        <h3>CoffeeShop Name</h3>
         <p>last viewed</p>
-        <a href="#">Link</a>
+        <div class="flex link">
+          <a href="https://example.com" class="link">CoffeeShop</a>
+        </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
-        <h6>Attachments</h6>
+        <h6>Distance</h6>
         <span>number</span>
       </div>
     </section>
