Update css and html in the cards

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <!-- <p>Sunday 11/12/2022 10:45am</p> -->
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row1" id="2">
         <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
@@ -53,14 +54,14 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row1" id="3">
         <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
@@ -69,14 +70,14 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row1" id="4">
         <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
@@ -85,14 +86,14 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       </section>
       <section class="flex allCards-bottom">
@@ -103,14 +104,14 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row2" id="6">
         <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
@@ -119,15 +120,15 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <!-- <a href="#">Link</a> -->
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row2" id="7">
         <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
@@ -136,14 +137,14 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row2" id="8">
         <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
@@ -152,14 +153,14 @@
           <p class="number">04</p>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>last viewed</p>
+        <p>Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
-          <a href="https://example.com" class="link">CoffeeShop</a>
+          <a href="https://example.com" class="link">https://example.com</a>
         </div>
         <h4>Playlist</h4>
         <h5>Name of Playlist</h5>
         <h6>Distance</h6>
-        <span>number</span>
+        <span class="distance">1.2 mi</span>
       </div>
     </section>
     </main>
