Update css & html to match the comp

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
       <h1 class="title">Shares</h1>
       <section class="flex allCards-top">
       <div class="flex cards card-row1" id="1">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
-        <div class="background">
-          <p>Views</p>
-          <p class="number">04</p>
+        <div class="flex background">
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <!-- <p>Sunday 11/12/2022 10:45am</p> -->
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -48,13 +49,15 @@
         <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row1" id="2">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
-        <div class="background">
-          <p>Views</p>
-          <p class="number">04</p>
+        <div class="flex background">
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -64,13 +67,15 @@
         <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row1" id="3">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
-        <div class="background">
-          <p>Views</p>
-          <p class="number">04</p>
+        <div class="flex background">
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -80,13 +85,15 @@
         <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row1" id="4">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
-        <div class="background">
-          <p>Views</p>
-          <p class="number">04</p>
+        <div class="flex background">
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -98,13 +105,15 @@
       </section>
       <section class="flex allCards-bottom">
       <div class="flex cards card-row2" id="5">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1"  class="image"> -->
         <div class="flex background">
-          <p>Views</p>
-          <p class="number">04</p>
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -114,14 +123,15 @@
         <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row2" id="6">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
         <div class="flex background">
-          <p>Views</p>
-          <p class="number">04</p>
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
-        <!-- <a href="#">Link</a> -->
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -131,13 +141,15 @@
         <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row2" id="7">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
         <div class="flex background">
-          <p>Views</p>
-          <p class="number">04</p>
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
@@ -147,13 +159,15 @@
         <span class="distance">1.2 mi</span>
       </div>
       <div class="flex cards card-row2" id="8">
-        <!-- <img src="assets/latte.jpg" alt="Donor 1" class="image"> -->
         <div class="flex background">
-          <p>Views</p>
-          <p class="number">04</p>
+          <img src="assets/arrow.png" alt="Arrow" class="arrow icons">
+          <div class="flex arrowIcon">
+            <p>Views</p>
+            <p class="number">04</p>
+          </div>
         </div>
         <h3>CoffeeShop Name</h3>
-        <p>Sunday 11/12/2022 10:45am</p>
+        <p class="date">Sunday 11/12/2022 10:45am</p>
         <div class="flex link">
           <a href="https://example.com" class="link">https://example.com</a>
         </div>
